# andy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  devenv.nix  device_setup.md  emulator.md  flake.nix  gvproxy-vhost-user.md
andy-cli/: Cargo.toml  build.rs
andy-cli/src/: a11y.rs  assets.rs  client.rs  main.rs  runner.rs  types.rs
device/: Cargo.toml  build.sh
device/java/com/coordinator/: AccessibilityBridge.java  Main.java  VirtualScreen.java
device/src/: lib.rs
md/: ISSUES.md  plan-archive.md
us-net/: Cargo.toml  e2e-test.md
us-net/src/: backend.rs  gvproxy.rs  mac.rs  main.rs
