[workspace]
members = ["device", "andy-cli"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
argh = "0.1"
anyhow = "1"
serde = "1"
serde_json = "1"
tokio = "1"
bytes = "1"
reqwest = { version = "0.13", default-features = false }
axum = { version = "0.8", default-features = false }
tower-http = { version = "0.6", default-features = false }
jni = "0.21"
jpeg-encoder = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1
panic = "abort"
