[package]
name = "andy-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "andy"
path = "src/main.rs"

[dependencies]
argh.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
bytes.workspace = true
reqwest = { workspace = true, features = ["json", "zstd"] }
libc.workspace = true
