[package]
name = "us-net"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
argh.workspace = true
libc.workspace = true
nix = { version = "0.29", features = ["fs", "socket"] }
thiserror = "2.0"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
vhost = { version = "=0.15.0", features = ["vhost-user-backend"] }
vhost-user-backend = "=0.21.0"
virtio-bindings = "=0.2.6"
virtio-queue = { version = "=0.17.0", features = ["test-utils"] }
vm-memory = { version = "=0.17.1", features = ["backend-atomic", "backend-mmap"] }
vmm-sys-util = "=0.15.0"
